@@ -52,4 +52,10 @@ regions[footer_bottom] = Footer Bottom
 
 ; Define theme setting defaults.
 settings[sticky_header] = 1
+settings[black_and_white] = 1
+settings[color_scheme] = color-1
+settings[skin_style] = normal
 settings[site_layout] = wide
+settings[body_backgrounds] = goodnex_backgrounds
+settings[background_select] = pattern-1
+settings[portfolio_columns] = four columns
