@@ -1,4 +1,5 @@
 1.0.2 (09/18/13)
+  *Added theme setting to toggle black and white image effect.
   *Removed restriction on sticky header for logged in users.
   *Fixed a bug causing the Drupal contact form to not function properly. 
   *Fixed search box permissions in demo install. 
